--- a/templates/default/mms-agent.upstart.conf.erb
+++ b/templates/default/mms-agent.upstart.conf.erb
@@ -2,12 +2,8 @@
 
 description "MongoDB Monitoring Service (MMS) Agent"
 
-setuid nobody
-setgid nogroup
-
-pre-start script
-mkdir -p /var/log/mms-agent/
-end script
+setuid <%= node[:mms_agent][:user] %>
+setgid <%= node[:mms_agent][:group] %>
 
 post-stop script
 echo "$(date +'%Y-%m-%d %T,000') INFO mms-agent stopped" >> /var/log/mms-agent/agent.log
@@ -16,4 +12,4 @@ end script
 start on runlevel [2345]
 stop on runlevel [06]
 
-exec nohup /usr/bin/env python /opt/mms-agent/agent.py >> /var/log/mms-agent/agent.log 2>&1
+exec nohup /usr/bin/env python /usr/local/share/mms-agent/agent.py >> /var/log/mms-agent/agent.log 2>&1
